# mini_haas

./: README.md  pyproject.toml
docs/: architecture.md  queries.md
migrations/: README.md
mini_haas/: __init__.py  app.py  config.py  extensions.py
mini_haas/api/: __init__.py  auth.py  catalog.py  datacenters.py  errors.py  inventory.py  models.py  orders.py  provision.py  provisioning.py  telemetry.py  tickets.py
mini_haas/models/: __init__.py  allocation.py  audit.py  component.py  datacenter.py  enums.py  firmware.py  mixins.py  network.py  order.py  os_image.py  provision.py  rack.py  server.py  server_model.py  telemetry.py  ticket.py  warehouse.py
mini_haas/schemas/: __init__.py  requests.py
mini_haas/scripts/: seed_demo.py
mini_haas/services/: __init__.py  allocation.py  catalog.py  datacenters.py  errors.py  firmware_graph.py  inventory.py  orders.py  planning.py  provision.py  provisioning.py  telemetry.py  ticketing.py
mini_haas/workers/: provision_worker.py
tests/: conftest.py  test_api.py  test_cases.md  test_concurrency.py  test_orders.py
