[project]
name = "mini_haas"
version = "0.1.0"
description = "Mini-HaaS MVP"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0",
  "SQLAlchemy>=2.0",
  "Flask-Migrate>=4.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
